Fix scrollbar showing

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -66,7 +66,7 @@ body {
         }
         .message-list {
             height: calc(~"100% - 60px");
-            overflow-y: scroll;
+            overflow-y: auto;
             width: 100%;
             color: rgba(255, 255, 255, 0.9);
             .item:first-child {
@@ -155,7 +155,7 @@ body {
         padding: 10px;
         background-color: #303E4D;
         color: rgba(255, 255, 255, 0.9);
-        overflow-y: scroll;
+        overflow-y: auto;
         input, textarea {
             background-color: grey; 
             color: rgba(255, 255, 255, 0.9);  
